[package]
name = "id_tree"
version = "1.0.1"
authors = ["Ian Burns <iwburns8@gmail.com>"]
description = "A library for creating and modifying Tree structures."
documentation = "https://docs.rs/id_tree"
repository = "https://github.com/iwburns/id-tree"
readme = "README.md"
keywords = ["id_tree", "id-tree", "tree"]
categories = ["data-structures"]
license = "MIT"

[badges]
travis-ci = { repository = "https://github.com/iwburns/id-tree", branch = "master" }
appveyor = { repository = "https://github.com/iwburns/id-tree", branch = "master", service = "github" }

[dependencies]
snowflake = "1.2.0"

[[example]]
name = "basic"
path = "examples/basic.rs"
