[package]
name = "id_tree"
version = "2.0.0"
authors = ["Ian Burns <iwburns8@gmail.com>"]
description = "A library for creating and modifying Tree structures."
documentation = "https://docs.rs/id_tree"
repository = "https://github.com/iwburns/id-tree"
readme = "README.md"
keywords = ["id_tree", "id-tree", "tree"]
categories = ["data-structures"]
license = "MIT"

[badges]
travis-ci = { repository = "iwburns/id-tree", branch = "master" }
appveyor = { repository = "iwburns/id-tree", branch = "master", service = "github" }

[dependencies]
snowflake = "1.3.0"

[[example]]
name = "basic"
path = "examples/basic.rs"
